<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".MainActivity"
    style="@style/constraintLayout">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="89dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="74dp"
                    android:text="@string/app_name"
                    android:textColor="#3A3A3A"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/definition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/definition"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/familyactivities"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center|start"
                    android:text="@string/familyactivities"
                    android:textColor="@color/bttnTextColor"
                    android:textSize="20sp"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/definition" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dailyPlaner"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center|start"
                    android:text="@string/dailyPlaner"
                    android:textColor="@color/bttnTextColor"
                    android:textSize="20sp"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/familyactivities" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/taskmanager"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center|start"
                    android:text="@string/taskmanager"
                    android:textColor="@color/bttnTextColor"
                    android:textSize="20sp"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dailyPlaner" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reminders"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center|start"
                    android:text="@string/reminders"
                    android:textColor="@color/bttnTextColor"
                    android:textSize="20sp"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/taskmanager" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/wellness"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center|start"
                    android:text="@string/Wellness"
                    android:textColor="@color/bttnTextColor"
                    android:textSize="20sp"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reminders" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/importantdocuments"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center|start"
                    android:text="@string/importantdocuments"
                    android:textColor="@color/bttnTextColor"
                    android:textSize="20sp"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wellness" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/health"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center|start"
                    android:text="@string/health"
                    android:textColor="@color/bttnTextColor"
                    android:textSize="20sp"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/importantdocuments" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/office"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/rounded_button"
                    android:gravity="center|start"
                    android:text="@string/office"
                    android:textColor="@color/bttnTextColor"
                    android:textSize="20sp"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/health" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>